# CodeRAG

./: LICENSE  README.md
data/python_project_1/: .python-version  gradapp.py  pdf_to_vectorstore.py  pyproject.toml  rag_to_gemini.py  requirements.txt
data/python_project_1/.streamlit/: login.yaml
